--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7d76b339-a325-4c58-b3bd-ee2062cfb31d"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
