--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/apexcharts/dist/apexcharts.min.js"
+
             ]
           },
           "configurations": {
