--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "chart.js": "~2.5.0",
+    "ng2-charts": "~1.5.0"
   },
   "private": true,
   "dependencies": {
@@ -21,10 +23,20 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@fullcalendar/core": "^5.8.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@types/highcharts": "^7.0.0",
+    "angular-highcharts": "^12.0.0",
+    "apexcharts": "^3.27.1",
     "bootstrap": "^5.0.1",
+    "chart.js": "^2.9.4",
+    "highcharts-angular": "^2.10.0",
     "jquery": "^3.6.0",
+    "ng-apexcharts": "^1.5.12",
+    "ng-chartjs": "^0.2.3",
+    "ng2-charts": "^2.4.2",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -33,6 +45,7 @@
     "@angular-devkit/build-angular": "^12.0.4",
     "@angular/cli": "~11.2.7",
     "@angular/compiler-cli": "~11.2.8",
+    "@types/chart.js": "^2.9.32",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
@@ -44,6 +57,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng2-charts-schematics": "^0.1.7",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
