--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng-apexcharts": "^1.5.12",
     "ng-chartjs": "^0.2.3",
     "ng2-charts": "^2.4.2",
+    "ngx-pagination": "^5.1.1",
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
