--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "object-mapper": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
