--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@angular/router": "~11.2.8",
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "apexcharts": "^3.27.1",
     "bootstrap": "^5.0.1",
+    "chart.js": "^2.9.3",
     "jquery": "^3.6.0",
+    "ng-apexcharts": "^1.5.12",
+    "ng-chartjs": "^0.2.3",
     "ngx-pagination": "^5.1.1",
     "object-mapper": "^6.2.0",
     "rxjs": "~6.6.0",
