--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
-    "bootstrap": "^5.0.1",
+    "apexcharts": "^3.27.1",
+    "bootstrap": "^5.0.2",
+    "chart.js": "^2.9.3",
     "jquery": "^3.6.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "ng-apexcharts": "^1.5.12",
+    "ng-chartjs": "^0.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
