--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-font-awesome": "^3.1.2",
+    "apexcharts": "^3.27.1",
     "bootstrap": "^5.0.2",
     "chart.js": "^2.9.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "materialize-css": "^1.0.0-rc.2",
     "ng-apexcharts": "^1.5.12",
     "ng-chartjs": "^0.2.3",
-    "@auth0/angular-jwt": "^5.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
-    "apexcharts": "^3.27.1",
     "ngx-pagination": "^5.1.1",
     "object-mapper": "^6.2.0",
     "rxjs": "~6.6.0",
