Pdf Generation for Labs between today and yesterday

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "apexcharts": "^3.27.1",
     "bootstrap": "^5.0.1",
     "chart.js": "^2.9.3",
+    "html2pdf.js": "^0.9.3",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
     "ng-apexcharts": "^1.5.12",
     "ng-chartjs": "^0.2.3",
     "ngx-pagination": "^5.1.1",
