--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "angular-font-awesome": "^3.1.2",
     "apexcharts": "^3.27.1",
+    "html2pdf.js": "^0.9.3",
+    "jspdf": "^2.3.1",
     "bootstrap": "^5.0.2",
     "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
